--- a/index.html
+++ b/index.html
@@ -4,17 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Google</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="container">
         <div id="nav">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a>Gmail</a></li>
+                <li><a>Images</a></li>
+                <li><a><img src="images/icons/black-24dp/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
+                <li><a><img src="images/perfil.png" alt="perfil"></a></li>
             </ul>
+        </div>
+        <div>
+            <img src="images/googleLogo.png" alt="logo de google">
+        </div>
+        <div>
+            <input type="text">
+        </div>
+        <div>
+            <button>Buscar con Google</button>
+            <button>Me siento con suerte</button>
+        </div>
+        <div>
+            Ofrecido por Google en:<a>English</a>
+        </div>
+        <div>
+            Argentina
+        </div>
+        <div>
+            <a>Sobre Google</a>
+            <a>Publicidad</a>
+            <a>Negocios</a>
+        </div>
+        <div>
+            <a>Còmo funciona la Bùsqueda</a>
+        </div>
+        <div>
+            <a>Privacidad</a>
+            <a>Condiciones</a>
+            <a>Preferencias</a>
         </div>
 
     </div>
