--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a>Gmail</a></li>
                 <li><a>Images</a></li>
-                <li><a><img src="images/icons/black-24dp/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
-                <li><a><img src="images/perfil.png" alt="perfil"></a></li>
+                <li><a><img src="images/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
+                <li><a><img src="images/imaPerfil.png" alt="perfil"></a></li>
             </ul>
         </div>
         <div>
