--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
         <div id="nav">
             <ul>
-                <li><a>Gmail</a></li>
-                <li><a>Images</a></li>
+                <li><a class="itemCont">Gmail</a></li>
+                <li><a class="itemCont">Imagenes</a></li>
                 <li><a><img src="images/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
                 <li><a><img src="images/imaPerfil.png" alt="perfil"></a></li>
             </ul>
