--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="container">
         <div id="nav">
             <ul>
-                <li><a class="itemCont">Gmail</a></li>
-                <li><a class="itemCont">Imagenes</a></li>
-                <li><a><img src="images/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
-                <li><a><img src="images/imaPerfil.png" alt="perfil"></a></li>
+                <li><a class="itemCont" id="gmail">Gmail</a></li>
+                <li><a class="itemCont" id="imagenes">Imagenes</a></li>
+                <li><a class="iconos"><img src="images/1x/outline_menu_black_24dp.png" alt="icono"></a></li>
+                <li><a class="iconos"><img id="redondo" src="images/imaPerfil.png" alt="perfil"></a></li>
             </ul>
         </div>
         <div>
