--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a class="iconos"><img id="redondo" src="images/imaPerfil.png" alt="perfil"></a></li>
             </ul>
         </div>
-        <div>
-            <img src="images/googleLogo.png" alt="logo de google">
+        <div class="googleLogo">
+            <img src="images/googleLogo.png" alt="logo de google" id="fotoLogo">
         </div>
         <div>
             <input type="text">
