--- a/index.html
+++ b/index.html
@@ -22,33 +22,35 @@
         <div class="googleLogo">
             <img src="images/googleLogo.png" alt="logo de google" id="fotoLogo">
         </div>
-        <div>
-            <input type="text">
+        <div id="buscador">
+            <input id="inp" type="text">
         </div>
-        <div>
-            <button>Buscar con Google</button>
-            <button>Me siento con suerte</button>
+        <div id="bottomSearch">
+            <button class="bottomBusca">Buscar con Google</button>
+            <button class="bottomBusca">Me siento con suerte</button>
         </div>
-        <div>
-            Ofrecido por Google en:<a>English</a>
+        <div id="googleThanks">
+            Ofrecido por Google en:<a href="https://www.google.com/">English</a>
         </div>
-        <div>
-            Argentina
-        </div>
-        <div>
-            <a>Sobre Google</a>
-            <a>Publicidad</a>
-            <a>Negocios</a>
-        </div>
-        <div>
-            <a>Còmo funciona la Bùsqueda</a>
-        </div>
-        <div>
-            <a>Privacidad</a>
-            <a>Condiciones</a>
-            <a>Preferencias</a>
-        </div>
-
+    
+        <div id="footer">
+            <div id="argen">
+                Argentina
+            </div>
+            <div id="segundoFooter">
+                    <div class="primeros4">
+                    <a class="cosasFooter">Sobre Google</a>
+                    <a class="cosasFooter">Publicidad</a>
+                    <a class="cosasFooter">Negocios</a>
+                    <a class="cosasFooter">Còmo funciona la Bùsqueda</a>
+                    </div>
+                 <div class="primeros4">
+                   <a class="cosasFooter">Privacidad</a>
+                   <a class="cosasFooter">Condiciones</a>
+                   <a class="cosasFooter">Preferencias</a>
+                 </div>
+            </div>
+       </div>
     </div>
 </body>
 </html>
